Issue #622 glossary terms overlap issue

--- a/web/themes/custom/gpw/src/components/glossary/_glossary_term_page_blocks.scss
+++ b/web/themes/custom/gpw/src/components/glossary/_glossary_term_page_blocks.scss
@@ -60,4 +60,5 @@
 .field--name-field-definitions > .field--label {
   @extend %heading-default;
   color: $text-color;
+  margin-bottom: 1em;
 }
