--- a/web/themes/custom/gpw/src/components/glossary/glossary.scss
+++ b/web/themes/custom/gpw/src/components/glossary/glossary.scss
@@ -46,7 +46,6 @@
     }
   }
   .field--item {
-    float:left;
     display: inline;
     &:not(:last-child) {
       &:after{
